// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserDetails render user info 1`] = `
<div>
  <span
    class="pf-v6-u-font-weight-bold pf-v6-u-font-size-sm"
  >
    <div
      style="display: contents;"
    >
      <a
        class="user-info"
        href="/audits?search=user+%3D+admin"
      >
        Admin 
      </a>
    </div>
    <div
      class="gray-text"
    >
      (
      127.0.0.1
      )
    </div>
  </span>
</div>
`;

exports[`UserDetails render user info with audit login 1`] = `
<div>
  <span
    class="pf-v6-u-font-weight-bold pf-v6-u-font-size-sm"
  >
    <div
      style="display: contents;"
    >
      <a
        class="user-info"
        href="/audits?search=user+%3D+admin"
      >
        Admin 
      </a>
    </div>
    <div>
      <a
        href="/audits?search=id+%3D+123"
      >
        Logged-in
      </a>
    </div>
  </span>
</div>
`;
